objects/SVMXC__Service_Group__c.object
<CustomObject>
    <fields>
        <fullName>SMAX_PS_Is_Enterprise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Enterprise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SVMX_PS_Service_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Depicts the service manager for a service team</description>
        <inlineHelpText>Depicts the service manager for a service team</inlineHelpText>
        <label>Service Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>